# StiltFox-Universal-Library

./: .gitignore  CMakeLists.txt  Color.cpp  Config.cmake.in  Crypto.cpp  File.cpp  FileOps.cpp  LICENSE  SqliteConnection.cpp  install.sh  install_cross_wndows.sh  install_dependancies.sh  install_linux.sh  install_mac.sh  readme.md  windows.cmake
cmake_files/: Mac.cmake  windows.cmake
includes/: DatabaseConnection.hpp  File.hpp  FileOps.hpp  crypto.hpp
lib/: CMakeLists.txt
lib/sqlite/: CMakeLists.txt
main/inquisitor/coutcapture/: CMakeLists.txt  CoutCapture.hpp
modules/: CMakeLists.txt
modules/databaseconnection/: CMakeLists.txt  DatabaseConnection.hpp
modules/databaseconnection/sqlite/: CMakeLists.txt  SqliteConnection.cpp  SqliteConnection.hpp  SqliteConnectionTest.cpp
modules/file/: CMakeLists.txt  FileTest.cpp
modules/logging/: CMakeLists.txt  Logger.cpp  Logger.hpp  LoggerTest.cpp  logger.cpp  logger.hpp
modules/logging/filelogger/: CMakeLists.txt  FileLogger.cpp  FileLogger.hpp  FileLoggerTest.cpp  Filelogger.cpp  filelogger.cpp  filelogger.hpp
modules/networking/: CMakeLists.txt
modules/networking/httpmessage/: CMakeLists.txt  HttpMessage.cpp  HttpMessageTest.cpp
modules/sfcolor/: CMakeLists.txt  SFColor.cpp  SFColor.hpp
modules/sfcrypto/: CMakeLists.txt  SFCrypto.hpp
modules/stringutilites/: CMakeLists.txt
modules/stringutilities/: CMakeLists.txt  StringUtilities.cpp  StringUtilities.hpp  StringUtilitiesTest.cpp
modules/testing/: CMakeLists.txt  readme.md
modules/testing/coutcapture/: CMakeLists.txt  CoutCapture.cpp  readme.md
modules/testing/tempfile/: CMakeLists.txt  TempFile.hpp  readme.md
old/: CMakeLists.txt  install_cross_wndows.sh  install_dependancies.sh  readme.md
old/modules/: CMakeLists.txt
old/modules/databaseconnection/sqlite/: CMakeLists.txt  SqliteConnection.cpp
old/modules/file/: File.cpp  File.hpp  FileTest.cpp
old/modules/logging/: Logger.hpp  LoggerTest.cpp
old/modules/logging/filelogger/: FileLoggerTest.cpp
old/modules/networking/httpmessage/: HttpMessage.hpp
old/modules/testing/: CMakeLists.txt
old/modules/testing/tempfile/: TempFile.cpp
test/: CMakeLists.txt  Crypto.cpp  FileOps.cpp  SqliteConnection.cpp
