add_library(FileLogger FileLogger.cpp)
target_link_libraries(FileLogger Logger)
set_target_properties(FileLogger PROPERTIES PUBLIC_HEADER "modules/logging/filelogger/FileLogger.hpp")
target_include_directories(FileLogger PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>" "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")

if(NOT SFSkipTesting)
    add_executable(FileLoggerTest FileLoggerTest.cpp)
    target_link_libraries(FileLoggerTest GTest::gtest_main FileLogger File CoutCapture TempFile)
    gtest_discover_tests(FileLoggerTest)
endif()